// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <HandlingMessage /> rendering should render empty correctly with no handling message 1`] = `
<div
  className="col-12 mode_input"
>
  <div
    className="handling-message__box"
  >
    <div
      className="label"
    />
    <div>
      We gaan zo snel mogelijk aan de slag.
    </div>
  </div>
</div>
`;

exports[`Form component <HandlingMessage /> rendering should render handling message correctly 1`] = `
<div
  className="col-12 mode_input"
>
  <div
    className="handling-message__box"
  >
    <div
      className="label"
    />
    <div
      className="plain-text__box-p"
      key="undefined-1"
    >
      Jaaaaa!
    </div>
    <div
      className="plain-text__box-p"
      key="undefined-2"
    >
      Neee!
    </div>
  </div>
</div>
`;

exports[`Form component <HandlingMessage /> rendering should render no handling message when not visible 1`] = `""`;
